--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h2 {
 }
 
 .hero {
-  height: 300px;
+  height: 412px;
   /* background-image: url('../images/portada.jpg'); */
   background-color: #44bd32;
   /* background-size: 500px; */
@@ -67,13 +67,13 @@ h2 {
   box-shadow: 0px 0px 5px #bebebe;
 }
 
-.proyect-course,
-.proyect-date,
-.proyect-url {
+.project-course,
+.project-date,
+.project-url {
   margin: 10px 0;
 }
 
-.proyect-description {
+.project-description {
   font-size: 20px;
 }
 
@@ -81,19 +81,19 @@ h2 {
   font-family: 'Fjalla One', sans-serif;
 }
 
-.proyect-title {
+.project-title {
   font-size: 30px;
   margin-top: 0;
   margin-bottom: 10px;
 }
 
-.proyect-details {
-  /* estos son las medidas del espacio que le pertenece a la clase "proyect" */
+.project-details {
+  /* estos son las medidas del espacio que le pertenece a la clase "project" */
   width: 500px;
   /* height: 100px; */
 }
 
-.proyect-image-container {
+.project-image-container {
   width: 500px;
 }
 
@@ -223,6 +223,26 @@ figure {
   padding: 5px 20px;
   text-decoration: none;
   border-radius: 5px;
+}
+
+/* Esto es para que la sección con nombre de clase "certificates" esté 
+centrada con un ancho máximo de 1000 pixeles con un margen automático */
+.certificates {
+  width: 1000px;
+  margin: 0 auto;
+  /* background: #dcdde1; */
+  background: white;
+}
+
+.diplomas {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.certificates-image img {
+  height: 342px;
+  margin-bottom: 27px;
 }
 
 .contact {
