--- a/css/platzi-video-styles.css
+++ b/css/platzi-video-styles.css
@@ -334,6 +334,9 @@ ol li {
                          "options"
                          "more";
   }
+  .title {
+    margin-left: -60px;
+  }
   .header {
     display: grid;
     grid-template-columns: 50px 90%;
