--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -375,7 +375,7 @@ figure {
 }
 .container.width {
   width: 100%;
-  justify-content: center;
+  justify-content: center !important;
 }
 .container.foot {
   display: grid;
